--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,4 +18,11 @@
         android:text="请点击"
         android:textSize="20sp"
         />
+
+    <ImageView
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_progress_load"
+        android:visibility="gone" />
     </LinearLayout>
